@@ -5,6 +5,7 @@ Version 3.4 -> 3.5.0
  - refreshed SynonymAnalyzerViewer sample and wordnet index (Thomas Koch)
  - added PythonReusableAnalyzerBase (Michael McCandless)
  - added PythonIndexDeletionPolicy.java (Michael McCandless)
+ - added spellchecker contrib module to build
  - 
 
 Version 3.3 -> 3.4
